lesson_7, docker-compose

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ DB_PORT=
 
 SECRET=test
 
-DEBUG=on/off
+ALLOWED_HOSTS=127.0.0.1,localhost
+DEBUG=True
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -14,3 +15,8 @@ GOOGLE_REDIRECT_URI=
 
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
+
+REDIS_URL=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
